# security-enforcer

./: .gitignore  Dockerfile  README.md  REPORT.md  SECURITY_FIXES.md  enforcer.py  enforcerctl  orchestrator.py  pyproject.toml  pytest.ini
tests/: REPORT.md  test_boundaries_mocked.py  test_core.py  test_core_real.py  test_smoke_imports.py
utils/: validation.py
