[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "security-enforcer"
version = "1.0.0"
description = "Dynamic Security Policy Enforcer - CVE, Attacks, Firewall, Container Security, FIM, SIEM"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "rhizor", email = "rhizor@example.com"}
]
requires-python = ">=3.8"
dependencies = [
    "requests>=2.31.0",
    "urllib3>=1.26.0",
    "pyyaml>=6.0.1",
    "click>=8.1.0",
    "colorama>=0.4.6",
    "rich>=13.0.0",
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
    "cryptography>=41.0.0",
    "schedule>=1.2.0",
    "psutil>=5.9.0",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
    "Topic :: System :: Networking :: Firewalls",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "mypy>=1.5.0",
    "bandit>=1.7.0",
    "safety>=2.3.0",
]

[project.scripts]
enforcer = "enforcer:main"
enforcerctl = "enforcerctl:main"
orchestrator = "orchestrator:main"

[project.urls]
Homepage = "https://github.com/rhizor/security-enforcer"
Issues = "https://github.com/rhizor/security-enforcer/issues"

[tool.setuptools]
py-modules = ["enforcer", "orchestrator"]

[tool.black]
line-length = 88
target-version = ["py38", "py39", "py310", "py311", "py312"]

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true

